--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       const userCredential = await firebase.auth().createUserWithEmailAndPassword(email, password);
       const user = userCredential.user;
 
-      const res = await fetch("/api/register", {
+           const res = await fetch("/api/register", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
@@ -114,7 +114,13 @@
         })
       });
 
-      const data = await res.json();
+      const text = await res.text();
+      let data = {};
+      try {
+        data = JSON.parse(text);
+      } catch (e) {
+        throw new Error("Invalid response from server: " + text);
+      }
 
       if (data.status === "exists") {
         statusMsg.style.display = "block";
