--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       const userCredential = await firebase.auth().createUserWithEmailAndPassword(email, password);
       const user = userCredential.user;
 
-           const res = await fetch("/api/register", {
+           const res = await fetch("https://krishi-backend-vwum.onrender.com/api/register", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
